--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "pg": "^8.14.0",
     "pg-promise": "^11.12.1",
     "pm2": "^6.0.5",
-    "tsconfig-paths": "^4.2.0",
+    "react-native": "^0.78.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
@@ -46,6 +46,7 @@
     "@types/pg": "^8.11.11",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2"
   }
 }
