--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^5.0.0",
+    "@koa/multer": "^3.0.2",
     "app-root-path": "^3.1.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -38,6 +39,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/koa": "^2.15.0",
     "@types/koa__cors": "^5.0.0",
+    "@types/koa__multer": "^2.0.7",
     "@types/koa__router": "^12.0.4",
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-router": "^7.4.8",
