--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.16.0",
     "koa-bodyparser": "^4.4.1",
+    "koa-mount": "^4.0.0",
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
     "pg": "^8.14.0",
