--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@koa/multer": "^3.0.2",
     "app-root-path": "^3.1.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.16.0",
     "koa-bodyparser": "^4.4.1",
+    "koa-jwt": "^4.0.4",
     "koa-mount": "^4.0.0",
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
